After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775373 - missing back button when getting to an app via search
missing back button when getting to an app via search
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.23.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-11-30 00:22 UTC by Andreas Nilsson
Modified: 2016-12-08 12:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (283.66 KB, image/png)
2016-11-30 00:22 UTC, Andreas Nilsson
Details

Description Andreas Nilsson 2016-11-30 00:22:20 UTC
Created attachment 341008 [details]
screenshot

When I go to an app via browsing, I get a back button, but not when I get to it via searching for it and clicking the result.