Avoid triggering unwanted mode switches with search state changes

Avoid a feedback loop that led to first switching to the overview page
and then to the details page every time when clicking on a search
result.

https://bugzilla.gnome.org/show_bug.cgi?id=775373